--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>For Nihola</title>
   <style>
     *,
     *::before,
@@ -17,62 +17,149 @@
     body{
       min-height: 100vh;
       display: flex;
-      align-items: center;
       justify-content: center;
+      font-family: "Arial", sans-serif;
+      font-weight: 400;
+
     }
 
-    .box{
-      width: 800px;
-      height: 500px;
-      background-color: #fff;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
+    #hero{
+      width: 1000px;
+      padding: 80px 0;
     }
 
-    .box__inner{
-      border: 2px solid #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .table-title{
+      text-align: center;
+      margin-bottom: 40px;
     }
 
-    .box__inner:first-child{
-      grid-row: 1 / 3;
+    .table__container{
+      width: 100%;
+      border-collapse: collapse;
     }
 
-    .box__inner:nth-child(2),
-    .box__inner:nth-child(3),
-    .box__inner:nth-child(6){
-      background-color: #a9b0a9;
+    .table__head,
+    .table__data{
+      border: 1px solid #ddd;
+      text-align: left;
+      padding: 8px;
     }
 
-    .box__inner:last-child{
-      grid-column: 2 / 4;
-    }
-
-    .box__item{
-      font-size: 40px;
-      font-weight: bold;
+    .table__row:nth-child(even){
+      background-color: #ddd;
     }
 
   </style>
 </head>
 <body>
-  <div class="box">
-    <div class="box__inner">
-      <ul class="box__list">
-        <li class="box__item">Mavzu-1</li>
-        <li class="box__item">Mavzu-2</li>
-        <li class="box__item">Mavzu-3</li>
-      </ul>
-    </div>
-    <div class="box__inner"></div>
-    <div class="box__inner"></div>
-    <div class="box__inner"></div>
-    <div class="box__inner"></div>
-    <div class="box__inner"></div>
-    <div class="box__inner"></div>
-  </div>
+  <section id="hero" class="hero">
+    <h2 class="table-title">
+      Movie Hall
+    </h2>
+    <table class="table table__container">
+      <thead class="table__header">
+        <tr class="table__row">
+          <th class="table__head">
+            #
+          </th>
+          <th class="table__head">
+            Name
+          </th>
+          <th class="table__head">
+            Date
+          </th>
+          <th class="table__head">
+            Genre
+          </th>
+        </tr>
+      </thead>
+      <tbody class="table__body">
+        <tr class="table__row">
+          <td class="table__data">
+            1
+          </td>
+          <td class="table__data">
+            Hercules: the animated series
+          </td>
+          <td class="table__data">
+            August 31, 1998
+          </td>
+          <td class="table__data">
+            Comedy, Fantasy
+          </td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__data">
+            2
+          </td>
+          <td class="table__data">
+            Chip 'n Dale's Rescue Rangers
+          </td>
+          <td class="table__data">
+            March 4, 1989
+          </td>
+          <td class="table__data">
+            Adventure, Comedy, Mystery
+          </td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__data">
+            3
+          </td>
+          <td class="table__data">
+            In Time
+          </td>
+          <td class="table__data">
+            October 28, 2011
+          </td>
+          <td class="table__data">
+            Action, Science Fiction, Melodrama, Thriller, Drama, Crime Fiction
+          </td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__data">
+            4
+          </td>
+          <td class="table__data">
+            Shazam
+          </td>
+          <td class="table__data">
+            April 5, 2019
+          </td>
+          <td class="table__data">
+            Action, Superhero, Comedy, Science Fiction, Adventure
+          </td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__data">
+            5
+          </td>
+          <td class="table__data">
+            The Founder
+          </td>
+          <td class="table__data">
+            December 16, 2016
+          </td>
+          <td class="table__data">
+            Drama, Historical Fiction
+          </td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__data">
+            6
+          </td>
+          <td class="table__data">
+            Top Gun: Maverick
+          </td>
+          <td class="table__data">
+            May 27, 2022
+          </td>
+          <td class="table__data">
+            Action, Drama, Adventure
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 </body>
 </html>
